# pipeline_etl

./: README.md
api-github/: api-git.py  pyproject.toml
api_git/: amazon.csv  api-git.py
portal-transparencia/: portal.py
portal-transparencia/portal_transparencia.csv/: .part-00000-ef3caacc-de34-4991-b709-c2a3623ee734-c000.csv.crc  part-00000-ef3caacc-de34-4991-b709-c2a3623ee734-c000.csv
workshopAthena/: csv_to_parquet.py  script.py
workshopAthena/workshopAthena/output_file/: Netflix_movies_and_tv_shows_clustering.parquet
