[tool.poetry]
name = "api-github"
version = "0.1.0"
description = ""
authors = ["LucasDamascenoo <lucas.oliveira.damasceno@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.32.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
